# AgentForge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  docker-compose.yml  pyproject.toml  run_security_tests.sh  test_db.sqlite
.github/workflows/: ci.yml
.qoder/: settings.local.json
docs/: README.md
docs/architecture/: AGENT-MODEL.md  AI-RUNTIME-CONVERGENCE.md  CORE-DEV-WORKFLOW.md
docs/design/: ARCHITECTURE.md  DATABASE.md  SECURITY.md
docs/iteration/: ITER-001.md  ITER-架构设计-20260617.md
docs/product/: PRD-v1.md
docs/product-design/: PRD-CLAW-集成能力层-20260622.md  PRD-全栈Agent交互体验-20260623.md  PRD-多智能体框架-20260617.md
docs/standards/: DEVELOPMENT-GUIDE.md  ITERATION-STANDARD.md
docs/tasks/: CHECKLIST.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md
docs/tech-design/: API-SPEC.md  ARCHITECTURE.md  DATA-EXPORT.md  DATABASE.md  DEPLOYMENT.md  FRONTEND-ARCHITECTURE.md  INTEGRATION-CUBESANDBOX.md  LLM-CONFIG.md  RABBITMQ.md  SANDBOX-RESEARCH.md  SECURITY.md  SSE-EXECUTION-VISUALIZATION.md
migrations/: alembic.ini
migrations/alembic/: env.py
src/agent_forge/: cli.py  config.py  database.py  tracing.py
src/api/: main.py
src/middleware/: auth.py  rate_limit.py  trace.py
tests/: __init__.py  conftest.py
tests/agents/: test_resolver.py
tests/api/: test_agents.py  test_auth.py  test_bridge_cli.py  test_cost.py  test_dashboard.py  test_delivery.py  test_evaluation.py  test_execution_steps.py  test_exports.py  test_github_delivery.py  test_github_mount.py  test_health.py  test_llm_routes.py  test_pipeline_catalog.py  test_pipeline_runs.py  test_projects.py  test_route_prefixes.py  test_skill_import.py  test_skills.py  test_tasks.py  test_upload_mount.py  test_webhooks.py  test_workspace.py  test_zip_delivery.py
tests/harness/: test_governance.py  (+2 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  test_db.sqlite  tsconfig.json  vite.config.ts
(+415 files in other folders)
