[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-forge"
version = "0.1.0"
description = "通用多智能体协同框架，让 AI Agent 像有纪律的团队一样协作完成任务"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0",
    "aio-pika>=9.5.0",
    "pika>=1.3.0",
    "redis[hiredis]>=5.0.0",
    "slowapi>=0.1.9",
    "litellm>=1.50.0",
    "tenacity>=9.0.0",
    "pybreaker>=1.0.2",
    "watchdog>=6.0.0",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0.0",
    "cryptography>=44.0.0",
    "mcp>=0.1.0",
    "e2b-code-interpreter>=1.0.0",
    "pgvector>=0.2.5",
    "numpy>=1.26.0",
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "coverage>=7.0",
    "pytest-cov>=6.0",
    "pytest-dotenv>=0.5",
    "types-redis<5.0",
]

[project.scripts]
agent-forge = "src.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_forge", "src/api", "src/middleware"]

# ── pytest ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ── ruff ────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

# ── mypy ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
